<resources>
    <string name="app_name">Carpooling</string>
    <string name="string_user">Usuario</string>
    <string name="string_pass">Contraseña</string>
    <string name="button_pass">Ingresar</string>
    <string name="iniciar_sesion">Inicio de Sesión</string>
    <string name="correo">Correo</string>
    <string name="registro">Registro</string>
    <string name="button_registro">Registrarse</string>
    <string name="button_iniciar_sesion">Iniciar Sesión</string>
    <string name="carnet">Carnet</string>
</resources>