<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#87CEEB"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="EmployeeApp.EmployeeMainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/carrito"
        android:layout_weight= "25"
        />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="center|center_vertical|fill_vertical"
        android:inputType="text"
        android:textSize="28sp"
        android:singleLine="false"
        android:text="@string/iniciar_sesion"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="9"
        android:background="@drawable/style"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/string_user"
        android:textColorHint="#808080"
        android:textColor="#000000"

    />


    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="9"
        android:background="@drawable/style"
        android:ems="10"
        android:hint="@string/string_pass"
        android:inputType="textPassword"
        android:textColorHint="#808080"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/editCarnet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@drawable/style"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/carnet"
        android:textColorHint="#808080"
        android:ems="10"
        android:inputType="numberPassword" />


    <Button
        android:id="@+id/InicioSesion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="9"
        android:background="@drawable/style"
        android:backgroundTintMode="add"
        android:text="@string/button_iniciar_sesion"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="20"
        ></LinearLayout>
</LinearLayout>